<resources>
    <string name="app_name">Easy Reading</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="facebook_app_id">1703040656590544</string>

    <string name="toast_msg_newsfeedok">Loading News feeds</string>
    <string name="toast_msg_fbfeedok">Loading Facebook feeds</string>
    <string name="toast_no_internet">No Internet</string>
    <string name="toast_msg_wait">Wait for last operation to complete</string>

    <string name="msg_no_feed">No feeds</string>
    <string name="title_activity_facebook_login">FacebookLoginActivity</string>


    <string name="app_ver">1.4.6</string>

    <string name="action_filter">Filter</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_about">About</string>
    <string name="pref_filename">nu.info.zeeshan.preference_file</string>
    <string name="pref_facebookrss">facebook_rss</string>
    <string name="pref_newsrss">news_rss</string>
    <string name="pref_limit">feed_limit</string>
    <string name="pref_news_keywords">news_keywords</string>
    <string name="pref_update_interval">update_interval</string>
    <string name="pref_cat_facebook">Facebook</string>
    <string name="pref_cat_news">News</string>
    <string name="pref_cat_general">General</string>
    <string name="facebook_summary">Your Facebook notification RSS Feed</string>
    <string name="news_summary">Your News Rss Feed</string>
    <string name="limit_summary">Maximum feeds to keep of each type</string>
    <string name="update_interval_summary">How frequently you get updates</string>
    <string name="facebook_title">Facebook Feed</string>
    <string name="news_title">News Feed</string>
    <string name="limit_title">Maximum Feeds</string>
    <string name="update_interval_title">Update Interval (in Hours)</string>
    <string name="invalid_input">Entered value is not valid</string>
    <string name="bundle_arg_position">position</string>
    <string name="error_feed">Check RSS Feeds in settings</string>


    <string name="toast_msg_nofbfeed">Facebook source feed is empty!</string>
    <string name="toast_msg_nonewsfeed">News source feed is empty!</string>
    <string name="toast_msg_read">Read</string>
    <string name="toast_msg_unread">Unread</string>
    <string name="toast_msg_all">All</string>
    <string name="toast_msg_error">Error occurred!!</string>
    <string name="toast_msg_updated">Update Successfully</string>

    <string name="no_feeds_msg">No feeds!!</string>
    <string name="no_internet">Cannot connect to Internet</string>

    <string name="details">App Version 1.4.5\nDeveloped by Zeeshan Khan\n\u00A9 2014 Zeeshan Khan All Rights Reserved\n\nFork me on Github!\nhttp://github.com/zkhan93/EasyReading\n\nDeveloper Profile\nhttp://zkhan93.github.io\nYou Like it Then Rate it on Play Store!\nhttp://play.google.com/store/apps/details?id=nu.info.zeeshan.rnf</string>
    <string name="title_activity_secondary">About</string>
    <string name="title_activity_setting">Setting</string>

    <string name="banner_ad_unit_id">ca-app-pub-8023468202540314/2437684055</string>

</resources>
